# fastapi-async-db

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml
app/: pyproject.toml
app/app/: alembic.ini  main.py
app/app/alembic/: env.py
app/app/alembic/versions/: 4eb39ea59299_.py
app/app/api/routes/: api.py  articles.py  hello.py
app/app/core/: app_events.py  config.py
app/app/db/: base.py
app/app/db/repositories/: articles.py  base.py
app/app/db/tables/: __init__.py  articles.py
app/app/models/: articles.py  base.py
app/tests/: conftest.py  test_app.py  test_articles.py  test_hello.py
