[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Piotr Rogulski <rivinek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
databases = "^0.4.3"
SQLAlchemy = "1.3.24"
uvicorn = "^0.14.0"
alembic = "^1.6.5"
asyncpg = "^0.23.0"
psycopg2-binary = "^2.8.6"
httpx = "^0.18.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
